--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-manifest.json
+{
+	"manifest_version": 2,
+
+	"name": "Plonsker Purple Plugin",
+	"description": "This extension is a purple.com clone as a chrome extension",
+	"version": "1.0",
+
+	"browser_action": {
+		"default_icon": "icon.png",
+		"default_popup": "popup.html"
+	},
+
+	"chrome_url_overrides" : {
+    "newtab": "index.html"
+  	},
+
+	"permissions": [
+		"activeTab"
+	]
+}
